[package]
name = "ssh-test-server-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Ssh server for integration tests"
documentation = "https://docs.rs/ssh-test-server"
repository.workspace = true
keywords = ["ssh", "test"]
categories = ["development-tools::testing"]


[dependencies]
anyhow = "1.0.79"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
clap = { version = "4.5.0", features = ["derive"] }
ssh-test-server = { path = "../ssh-test-server" }


