[package]
name = "ssh-test-server-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version = "1.74.1"
license.workspace = true
description = "In memoery ssh server for integration testing - cli."
documentation = "https://docs.rs/ssh-test-server"
repository.workspace = true
keywords = ["ssh", "test"]
categories = ["development-tools::testing"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
ssh-test-server = { version = "0.1.1", path = "../ssh-test-server" }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }


