[package]
name = "ssh-test-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Running isolated ssh servers in integration tests"
documentation = "https://docs.rs/ssh-test-server"
repository.workspace = true
keywords = ["ssh", "test"]
categories = ["development-tools::testing"]

[dependencies]
anyhow = "1"
russh = "0.43.0-beta.1"
russh-keys = "0.42.0"

futures = "0.3"
tokio = "1"
tracing = "0.1"
cmdline_words_parser = "0.2"
async-trait = "0.1"
portpicker ="0.1"
rand = "0.8"

[dev-dependencies]
async-ssh2-lite = "0.4.7"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tracing-test = "0.2.4"
t-ssh-client = "0.2.1"
ssh2 = "0.9.4"
cucumber = { version = "0.20.2", features = ["tracing"] }
timeout-readwrite = "0.3.3"



[[test]]
name = "ssh"
harness = false  # allows Cucumber to print output instead of libtest

