[package]
name = "ssh-test-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Running isolated ssh servers in integration tests"
documentation = "https://docs.rs/ssh-test-server"
repository.workspace = true
keywords = ["ssh", "test"]
categories = ["development-tools::testing"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
cmdline_words_parser = "0.2"

futures = "0.3"
portpicker = "0.1"
rand = "0.8"
russh = "0.43"
russh-keys = "0.43"
tokio = "1"
tracing = "0.1"

[dev-dependencies]
async-ssh2-lite = "0.5.0"
cucumber = { version = "0.21.1", features = ["tracing"] }
ssh2 = "0.9.4"
t-ssh-client = "0.2.1"
timeout-readwrite = "0.4.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tracing-test = "0.2.5"

[[test]]
name = "ssh"
harness = false  # allows Cucumber to print output instead of libtest

