[package]
name = "ssh-test-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Running isolated ssh servers in integration tests"
documentation = "https://docs.rs/ssh-test-server"
repository.workspace = true
keywords = ["ssh", "test"]
categories = ["development-tools::testing"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
cmdline_words_parser = "0.2"

rand = "0.8"
random-port = "0.1"
russh = "0.45.0"
russh-keys = "0.45.0"
tokio = "1"
tracing = "0.1"

[dev-dependencies]
cucumber = { version = "0.21.1", features = ["tracing"] }
ssh2 = "0.9.4"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "ssh"
harness = false  # allows Cucumber to print output instead of libtest

